--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "gulp-uglify-es": "^3.0.0",
     "gulp-webp": "^4.0.1",
     "sass": "^1.63.6"
+  },
+  "dependencies": {
+    "simplebar": "^6.2.5"
   }
 }
